# encoding-identification

./: CMakeLists.txt  README.md  encodings.hpp  encodings_base.hpp  encodings_generated.hpp  encodings_windows.hpp  generate.py  main.cpp  simplesed.bat  single.hpp  singleheader.bat  singleheader.sh
generated_include/cor3ntin/: encodings_detection.hpp
src/: character-sets-1.csv  encodings.hpp  encodings_base.hpp  encodings_generated.hpp  encodings_windows.hpp  generate.py
